--- a/index.html
+++ b/index.html
@@ -33,144 +33,148 @@
         <!--closes title-->
         <div class="hold-text">
 
-            <div id="top-text">
+            <div class="top-text">
                 <p>President Trump wants to increase the budget for the Department of Defense by:</p>
-                <span class="billion">$54 billion</span>
-                <p>But to do that without raising the deficit or cutting entitlements, he needs to cut a lot of other programs.</p>
-                <p>Help Trump make the necessary cuts, by clicking the boxes next to programs below. Once you choose all the programs you want to cut, press the calculate button.
-                </p>
             </div>
+            <!-- <span class="billion">$54 billion</span> -->
             <div id="big-number">
 
-                <p>$<span class="defense">54000000000</span></p>
+                <p class="dollar-sign">$<span class="defense">54000000000</span></p>
                 <!-- <input type="button" value="Calculate" id="calculate-button" /> -->
             </div>
-
-
-            <div class="heading" id="departments">
-
-                <div id="departments-list">
-                    <details>
-                        <summary>
-                            <!-- <ul class="department"> -->
-
-                            Department of Agriculture
-                        </summary>
-                        <div class="agriculture">
-                            <ul class="list"><input type="checkbox" name="agriculture" class="subset" id="waste-water-loan" data-cut="498000000"> Water and Wastewater loan and grant program</input>
-                            </ul>
-                            <ul class="list"><input type="checkbox" name="agriculture" class="subset" id="rural-business-cooperative" data-cut="95000000">Rural Business and Cooperative Service discretionary activities</input>
-                            </ul>
-                            <ul class="list"><input type="checkbox" name="agriculture" class="subset" id="mcgovern-dole" data-cut="195000000">McGovern-Dole International Food for Education program</input>
-                            </ul>
-                            <ul class="list"><input type="checkbox" name="agriculture" class="subset" data-cut="3912000000">Other</input>
-                            </ul>
-                        </div>
-                    </details>
-
-                    <!-- close agriculture -->
-                    <!-- <ul class="department"> -->
-                    <details>
-                        <summary>Department of Commerce</summary>
-                        <!-- </ul> -->
-                        <div class="commerce">
-                            <ul class="list"><input type="checkbox" name="commerce" class="subset" id="economic-development-administration" data-cut="221000000"> Economic Development Administration</input>
-                            </ul>
-                            <ul class="list"><input type="checkbox" name="commerce" class="subset" id="minority-business" data-cut="35600000">Minority Business Development Agency</input>
-                            </ul>
-                            <ul class="list"><input type="checkbox" name="commerce" class="subset" id="manufacturing-extension" data-cut="124000000">Manufacturing Extension Partnership Program</input>
-                            </ul>
-                            <ul class="list"><input type="checkbox" name="commerce" class="subset" id="noaa" data-cut="250000000">National Oceanic and Atmospheric Administration programs and grants that support coastal and marine management, research and education</input>
-                            </ul>
-                            <ul class="list"><input type="checkbox" name="commerce" class="subset" data-cut="869400000">Other</input>
-                            </ul>
-                        </div>
-                    </details>
-
-                    <!--closes commerce-->
-                    <!-- <ul class="department"> -->
-                    <details>
-                        <summary>Department of Education</summary>
-                        <!-- </ul> -->
-                        <div class="education">
-                            <ul class="list"><input type="checkbox" name="education" class="subset" id="impact-aid-support" data-cut="66813">Impact Aid Support Payments for Federal Property, which help schools that have lost a portion of their tax base because the federal
-                                government bought at least 10 percent of land in their district.</input>
-                            </ul>
-                            <ul class="list"><input type="checkbox" name="education" class="subset" id="teacher-quality-partnership" data-cut="42500000">Teacher Quality Partnership, which provides training for new teachers.</input>
-                            </ul>
-                            <ul class="list"><input type="checkbox" name="education" class="subset" id="striving-readers">Striving Readers grants, which promote literacy skills for kids until 12th grade.</input>
-                            </ul>
-                            <ul class="list"><input type="checkbox" name="education" class="subset" id="supporting-effective-instruction" data-cut="2400000000">Supporting Effective Instruction state grants to support professional development for teachers and principals
-                                and to reduce class size.</input>
-                            </ul>
-                            <ul class="list"><input type="checkbox" name="education" class="subset" id="twenty-first-century">21st Century Learners Program, which funds a wide variety of before and after-school programs.</input>
-                            </ul>
-                            <ul class="list"><input type="checkbox" name="education" class="subset" id="supplemental-educational">Supplemental</input>
-                            </ul>
-                            <ul class="lists"><input type="checkbox" name="education" class="subset" id="supplemental-opportunity-grant">Supplemental Educational Opportunity Grant, a need-based grant of of $100 to $4,000 per student</input>
-                            </ul>
-                        </div>
-                        <!--closes education-->
-                    </details>
-                    <details>
-
-                        <summary>Department of Energy</summary>
-                        <div class="energy">
-                        </div>
-                    </details>
-                    <details>
-
-                        <summary>Department of Health and Human Services</summary>
-                        <div class="hhs">
-                        </div>
-                    </details>
-                    <details>
-
-                        <summary>FEMA</summary>
-                    </details>
-                    <details>
-                        <summary>Department of Housing and Urban Development</summary>
-                    </details>
-                    <details>
-                        <summary>Department of the Interior</summary>
-                    </details>
-                    <details>
-                        <summary>Department of Justice</summary>
-                    </details>
-                    <details>
-                        <summary>Department of Labor</summery>
-                    </details>
-                    <details>
-                        <summary>Department of State and USAID</summary>
-                    </details>
-                    <details>
-                        <summary>Treasury International Programs</summary>
-                    </details>
-                    <details>
-                        <summary>Department of Transportation</summary>
-                    </details>
-                    <details>
-
-                        <summary>Department of the Treasury</summary>
-                    </details>
-                    <details>
-                        <summary>Environmental Protection Agency</summary>
-                    </details>
-                    <details>
-                        <summary>NASA</summary>
-                    </details>
-                    <details>
-                        <summary>Small Business Administration</summary>
-                    </details>
-                    <details>
-                        <summary>Independent agencies</summary>
-                    </details>
-
-
-                </div>
-                <!--closes div department lists-->
+            <div class="top-text">
+                <p>But to do that without raising the deficit or cutting entitlements, he needs to cut a lot of other programs.</p>
+                <p>Help Trump make the necessary cuts, by clicking the boxes next to programs below.
+                </p>
             </div>
-            <!--closes div deaprtments heading-->
+        </div>
+
+
+
+        <div class="heading" id="departments">
+
+            <div id="departments-list">
+                <details>
+                    <summary>
+                        <!-- <ul class="department"> -->
+
+                        Department of Agriculture
+                    </summary>
+                    <div class="agriculture">
+                        <ul class="list"><input type="checkbox" name="agriculture" class="subset" id="waste-water-loan" data-cut="498000000"> Water and Wastewater loan and grant program</input>
+                        </ul>
+                        <ul class="list"><input type="checkbox" name="agriculture" class="subset" id="rural-business-cooperative" data-cut="95000000">Rural Business and Cooperative Service discretionary activities</input>
+                        </ul>
+                        <ul class="list"><input type="checkbox" name="agriculture" class="subset" id="mcgovern-dole" data-cut="195000000">McGovern-Dole International Food for Education program</input>
+                        </ul>
+                        <ul class="list"><input type="checkbox" name="agriculture" class="subset" data-cut="3912000000">Other</input>
+                        </ul>
+                    </div>
+                </details>
+
+                <!-- close agriculture -->
+                <!-- <ul class="department"> -->
+                <details>
+                    <summary>Department of Commerce</summary>
+                    <!-- </ul> -->
+                    <div class="commerce">
+                        <ul class="list"><input type="checkbox" name="commerce" class="subset" id="economic-development-administration" data-cut="221000000"> Economic Development Administration</input>
+                        </ul>
+                        <ul class="list"><input type="checkbox" name="commerce" class="subset" id="minority-business" data-cut="35600000">Minority Business Development Agency</input>
+                        </ul>
+                        <ul class="list"><input type="checkbox" name="commerce" class="subset" id="manufacturing-extension" data-cut="124000000">Manufacturing Extension Partnership Program</input>
+                        </ul>
+                        <ul class="list"><input type="checkbox" name="commerce" class="subset" id="noaa" data-cut="250000000">National Oceanic and Atmospheric Administration programs and grants that support coastal and marine management, research and education</input>
+                        </ul>
+                        <ul class="list"><input type="checkbox" name="commerce" class="subset" data-cut="869400000">Other</input>
+                        </ul>
+                    </div>
+                </details>
+
+                <!--closes commerce-->
+                <!-- <ul class="department"> -->
+                <details>
+                    <summary>Department of Education</summary>
+                    <!-- </ul> -->
+                    <div class="education">
+                        <ul class="list"><input type="checkbox" name="education" class="subset" id="impact-aid-support" data-cut="66813">Impact Aid Support Payments for Federal Property, which help schools that have lost a portion of their tax base because the federal
+                            government bought at least 10 percent of land in their district.</input>
+                        </ul>
+                        <ul class="list"><input type="checkbox" name="education" class="subset" id="teacher-quality-partnership" data-cut="42500000">Teacher Quality Partnership, which provides training for new teachers.</input>
+                        </ul>
+                        <ul class="list"><input type="checkbox" name="education" class="subset" id="striving-readers">Striving Readers grants, which promote literacy skills for kids until 12th grade.</input>
+                        </ul>
+                        <ul class="list"><input type="checkbox" name="education" class="subset" id="supporting-effective-instruction" data-cut="2400000000">Supporting Effective Instruction state grants to support professional development for teachers and principals and
+                            to reduce class size.</input>
+                        </ul>
+                        <ul class="list"><input type="checkbox" name="education" class="subset" id="twenty-first-century">21st Century Learners Program, which funds a wide variety of before and after-school programs.</input>
+                        </ul>
+                        <ul class="list"><input type="checkbox" name="education" class="subset" id="supplemental-educational">Supplemental</input>
+                        </ul>
+                        <ul class="lists"><input type="checkbox" name="education" class="subset" id="supplemental-opportunity-grant">Supplemental Educational Opportunity Grant, a need-based grant of of $100 to $4,000 per student</input>
+                        </ul>
+                    </div>
+                    <!--closes education-->
+                </details>
+                <details>
+
+                    <summary>Department of Energy</summary>
+                    <div class="energy">
+                    </div>
+                </details>
+                <details>
+
+                    <summary>Department of Health and Human Services</summary>
+                    <div class="hhs">
+                    </div>
+                </details>
+                <details>
+
+                    <summary>FEMA</summary>
+                </details>
+                <details>
+                    <summary>Department of Housing and Urban Development</summary>
+                </details>
+                <details>
+                    <summary>Department of the Interior</summary>
+                </details>
+                <details>
+                    <summary>Department of Justice</summary>
+                </details>
+                <details>
+                    <summary>Department of Labor</summery>
+                </details>
+                <details>
+                    <summary>Department of State and USAID</summary>
+                </details>
+                <details>
+                    <summary>Treasury International Programs</summary>
+                </details>
+                <details>
+                    <summary>Department of Transportation</summary>
+                </details>
+                <details>
+
+                    <summary>Department of the Treasury</summary>
+                </details>
+                <details>
+                    <summary>Environmental Protection Agency</summary>
+                </details>
+                <details>
+                    <summary>NASA</summary>
+                </details>
+                <details>
+                    <summary>Small Business Administration</summary>
+                </details>
+                <details>
+                    <summary>Independent agencies</summary>
+                </details>
+
+
+            </div>
+            <!--closes div department lists-->
+        </div>
+        <!--closes div deaprtments heading-->
         </div>
         <!-- closes the hold-text div -->
         <div class="heading" id="cuts">
