before copy pasting Brett's stuff, making this save

--- a/index.html
+++ b/index.html
@@ -54,6 +54,78 @@
         <div class="heading" id="departments">
 
             <div id="departments-list">
+                <div class="independent-agency">
+                    <details>
+                        <summary>Independent Federal Agencies</summary>
+                        <ul class="list">The Trump administration's budget blueprint calls for eliminating 19 independent federal agencies. Check the ones you'd like to terminate.</ul>
+                        <ul class="list"><input type="checkbox" name="independent-agency" class="subset" id="african-development" data-cut="28200000">The African Development Foundation works with people in Africa to secure economic development and growth in the continent's
+                            most vulnerable communities.</input>
+                        </ul>
+                        <ul class="list"><input type="checkbox" name="independent-agency" class="subset" id="appalachian-regional" data-cut="120000000">The Appalachian Regional Commission invests in economic opportunities, infrastructure and education in communities with
+                            the greatest need in Alabama, Georgia, Kentucky, Maryland, Mississippi, New York, North Carolina, Ohio, Pennsylvania, South Carolina, Tennessee, West Virginia, and Virginia, with the aim of achieving parity with the rest of
+                            the country.</input>
+                        </ul>
+                        <ul class="list"><input type="checkbox" name="independent-agency" class="subset" id="chemical-safety" data-cut="12436000">The Chemical Safety and Hazard Investigation Board investigates chemical accidents and makes recommendations for accident
+                            prevention.
+                            </input>
+                        </ul>
+                        <ul class="list"><input type="checkbox" name="independent-agency" class="subset" id="national-and-community-service" data-cut="794608000">The Corporation for National and Community Service is the nation's largest grant provider for community service
+                            and volunteer programs at local nonprofits, schools, community organizations, and governments</input>
+                        </ul>
+                        <ul class="list"><input type="checkbox" name="independent-agency" class="subset" id="public-broadcasting" data-cut="445000000">The Corporation for Public Broadcasting provide grants to public television and radio stations to support local programs
+                            and national distribution of shows like Frontline, Antiques Roadshow, and PBS Kids.</input>
+                        </ul>
+                        <ul class="list"><input type="checkbox" name="independent-agency" class="subset" id="delta-regional-authority" data-cut="15936000">The Delta Regional Authority supports disaster response, economic development investments, and healthcare access
+                            in the Mississippi Delta region.</input>
+                        </ul>
+                        <ul class="list"><input type="checkbox" name="independent-agency" class="subset" id="denali" data-cut="11000000">The Denali Commission funds programs that promote health, safety and economic self-sufficiency within rural communities in Alaska.</input>
+                        </ul>
+                        <ul class="list"><input type="checkbox" name="independent-agency" class="subset" id="museum-and-library-services" data-cut="230000000">The Institute of Museum and Library Services is the primary source of Federal support for the country's 123,000
+                            libraries and 35,000 museums.
+                            </input>
+                        </ul>
+                        <ul class="list"><input type="checkbox" name="independent-agency" class="subset" id="inter-american" data-cut="22200000"> The Inter-American Foundation invests in poor communities in Latin America and the Caribbean.</input>
+                        </ul>
+                        <ul class="list"><input type="checkbox" name="independent-agency" class="subset" id="trade-and-development" data-cut="80700000">The U.S. Trade and Development Agency helps companies create U.S. jobs by exporting U.S. goods and services to emerging
+                            economies
+                            </input>
+                        </ul>
+                        <ul class="list"><input type="checkbox" name="independent-agency" class="subset" id="legal-services" data-cut="475000000">The Legal Services Corporation distributes funds to local organizations that provide free civil legal assistance to people
+                            living in poverty.
+                            </input>
+                        </ul>
+                        <ul class="list"><input type="checkbox" name="independent-agency" class="subset" id="nea" data-cut="149849000">The National Endowment for the Arts is the independent federal agency that supports and funds the arts in America.
+                            </input>
+                        </ul>
+                        <ul class="list"><input type="checkbox" name="independent-agency" class="subset" id="neh" data-cut="149848000">The National Endowment for the Humanities supports education, scholarship, and research and development in the humanities and preserves
+                            America's cultural and intellectual resources.
+                            </input>
+                        </ul>
+                        <ul class="list"><input type="checkbox" name="independent-agency" class="subset" id="neighborhood-reinvestment" data-cut="140000000">The Neighborhood Reinvestment Corporation provides financial support, technical assistance, and training for affordable
+                            housing.
+                            </input>
+                        </ul>
+                        <ul class="list"><input type="checkbox" name="independent-agency" class="subset" id="northern-border" data-cut="5000000">The Northern Border Regional Commission addresses persistent economic distress in portions of Maine, New Hampshire, New York,
+                            and Vermont by developing transportation, basic public infrastructure, and job skills training.
+                            </input>
+                        </ul>
+                        <ul class="list"><input type="checkbox" name="independent-agency" class="subset" id="overseas-private-investment" data-cut="88000000">The Overseas Private Investment Corporation encourages American companies to invest in developing countries.
+                            </input>
+                        </ul>
+                        <ul class="list"><input type="checkbox" name="independent-agency" class="subset" id="institute-of-peace" data-cut="37884000">The United States Institute of Peace is an independent, nonpartisan institution that works to prevent and resolve international
+                            conflict without violence.
+                            </input>
+                        </ul>
+                        <ul class="list"><input type="checkbox" name="independent-agency" class="subset" id="council-on-homelessness" data-cut="3600000">United States Interagency Council on Homelessness creates partnerships at every level of government and with the private
+                            sector to prevent and end homelessness.
+                            </input>
+                        </ul>
+                        <ul class="list"><input type="checkbox" name="independent-agency" class="subset" id="woodrow-wilson-center" data-cut="10400000">The Woodrow Wilson International Center for Scholars shares research in the social sciences and humanities through conferences,
+                            publications and research grants.
+                            </input>
+                        </ul>
+                    </details>
+                </div>
                 <details>
                     <summary>
                         <!-- <ul class="department"> -->
@@ -61,13 +133,14 @@
                         Department of Agriculture
                     </summary>
                     <div class="agriculture">
-                        <ul class="list"><input type="checkbox" name="agriculture" class="subset" id="waste-water-loan" data-cut="498000000"> Water and Wastewater loan and grant program</input>
+                        <ul class="list"><input type="checkbox" name="agriculture" class="subset" id="waste-water-loan" data-cut="498000000"><label class="list">Water and Wastewater loan and grant program
+                        </label></input>
                         </ul>
-                        <ul class="list"><input type="checkbox" name="agriculture" class="subset" id="rural-business-cooperative" data-cut="95000000">Rural Business and Cooperative Service discretionary activities</input>
+                        <ul class="list"><input type="checkbox" name="agriculture" class="subset" id="rural-business-cooperative" data-cut="95000000"><label class="list">Rural Business and Cooperative Service discretionary activities</label></input>
                         </ul>
-                        <ul class="list"><input type="checkbox" name="agriculture" class="subset" id="mcgovern-dole" data-cut="195000000">McGovern-Dole International Food for Education program</input>
+                        <ul class="list"><input type="checkbox" name="agriculture" class="subset" id="mcgovern-dole" data-cut="195000000"><label class="list">McGovern-Dole International Food for Education program</label></input>
                         </ul>
-                        <ul class="list"><input type="checkbox" name="agriculture" class="subset" data-cut="3912000000">Other</input>
+                        <ul class="list"><input type="checkbox" name="agriculture" class="subset" data-cut="3912000000"><label class="list">Other</label></input>
                         </ul>
                     </div>
                 </details>
@@ -78,15 +151,15 @@
                     <summary>Department of Commerce</summary>
                     <!-- </ul> -->
                     <div class="commerce">
-                        <ul class="list"><input type="checkbox" name="commerce" class="subset" id="economic-development-administration" data-cut="221000000"> Economic Development Administration</input>
+                        <ul class="list"><input type="checkbox" name="commerce" class="subset" id="economic-development-administration" data-cut="221000000"> <label class="list">Economic Development Administration</label></input>
                         </ul>
-                        <ul class="list"><input type="checkbox" name="commerce" class="subset" id="minority-business" data-cut="35600000">Minority Business Development Agency</input>
+                        <ul class="list"><input type="checkbox" name="commerce" class="subset" id="minority-business" data-cut="35600000"><label class="list">Minority Business Development Agency</label></input>
                         </ul>
-                        <ul class="list"><input type="checkbox" name="commerce" class="subset" id="manufacturing-extension" data-cut="124000000">Manufacturing Extension Partnership Program</input>
+                        <ul class="list"><input type="checkbox" name="commerce" class="subset" id="manufacturing-extension" data-cut="124000000"><label class="list">Manufacturing Extension Partnership Program</label></input>
                         </ul>
-                        <ul class="list"><input type="checkbox" name="commerce" class="subset" id="noaa" data-cut="250000000">National Oceanic and Atmospheric Administration programs and grants that support coastal and marine management, research and education</input>
+                        <ul class="list"><input type="checkbox" name="commerce" class="subset" id="noaa" data-cut="250000000"><label class="list">National Oceanic and Atmospheric Administration programs and grants that support coastal and marine management, research and education</label></input>
                         </ul>
-                        <ul class="list"><input type="checkbox" name="commerce" class="subset" data-cut="869400000">Other</input>
+                        <ul class="list"><input type="checkbox" name="commerce" class="subset" data-cut="869400000"><label class="list">Other</label></input>
                         </ul>
                     </div>
                 </details>
