--- a/index.html
+++ b/index.html
@@ -489,19 +489,27 @@ publications and research grants.
                                         </div>
                                     </ul>
                                 </details>
+                                <div id="bottom">
+                                    <p><a href="second-page.html" class="photo">Go on to the next page.</a></p>
+                                </div>
                             </div>
                             <!--closes div department lists-->
+
                         </div>
                         <!--closes div deaprtments heading-->
+
                     </div>
                     <!-- closes the hold-text div -->
-                    <div class="heading" id="cuts">
+                    <!-- <div class="heading" id="cuts">
                         <div id="boxes"></div>
-                    </div>
+                    </div> -->
                     <!--closes div cuts heading-->
-                    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-                    <script src="main.js" type="text/javascript"></script>
-                    <!-- Your javascript should be called here -->
+
+                </div>
+                <!--closes div cuts heading-->
+                <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+                <script src="main.js" type="text/javascript"></script>
+                <!-- Your javascript should be called here -->
     </body>
 
 </html>
