--- a/second-page.html
+++ b/second-page.html
@@ -25,47 +25,51 @@
 
     <body>
         <!-- YOUR CONTENT GOES HERE -->
-        <div class="hold-text">
-            <h1 class="big-text2">Let's break it down</h1>
-            <a href="index.html" class="back">Back to the calculator.</a>
+        <div class="second-text">
+            <div class="second-top">
+                <h1 class="big-text2">Let's break it down</h1>
+                <p class="back"><a href="index.html" class="back">Back to the calculator.</a></p>
+            </div>
             <p class="top-text">The budget that President Trump proposed is a dramatic change from spending in previous years.</p>
-            <figure><img src="images/whiteHouse.jpg" class="icon" />
-                <figcaption>Created by Nikita Kozin from Noun Project</figcaption</figure>
-                    <p class="top-text ">"I wouldn’t call it a little bit of money coming out of a lot of departments," said Lindsay Koshgarian, research diretor of the National Priorities Project, a non-profit research organization critical of defense spending. "It’s a lot
-                        of money coming out of a lot of departments."</p>
+            <figure class="mulvaney"><img src="images/whiteHouse.jpg" class="icon">
+                <figcaption>Created by Nikita Kozin from Noun Project</figcaption>
+            </figure>
+            <p class="top-text">"I wouldn’t call it a little bit of money coming out of a lot of departments," said Lindsay Koshgarian, research director of the National Priorities Project, a non-profit research organization critical of defense spending. "It’s a lot of money
+                coming out of a lot of departments."</p>
 
-                    <p class="top-text">But the Trump administration has said this budget represents the kind of change in priorities that Trump promised to make.</p>
-                    <p class="top-text ">"This is the message the president wanted to send to the public, to the press, to Capitol Hill. He wanted more money for defense, more money for border enforcement, more money for law enforcement generally, more money for the vets,
-                        more money for school choice, " said Director of the Office of Management and Budget Mick Mulvaney during a press conference on March . "This budget simply reallocates and re-prioritizes spending. "</p>
-                    <figure><img src="images/mulvaney.jpg">
-                        <figcaption>Mick Mulvaney, director of the Office of Management and Budget, rolled out Trump's budeget proposal last month.</figcaption>
+            <p class="top-text">But the Trump administration has said this budget represents the kind of change in priorities that Trump promised to make.</p>
+            <p class="top-text ">"This is the message the president wanted to send to the public, to the press, to Capitol Hill. He wanted more money for defense, more money for border enforcement, more money for law enforcement generally, more money for the vets, more money
+                for school choice," said Director of the Office of Management and Budget Mick Mulvaney during a press conference on March. "This budget simply reallocates and re-prioritizes spending."</p>
+            <figure class="mulvaney"><img src="images/mulvaney.jpg" class=mulvaney>
+                <figcaption>Mick Mulvaney, director of the Office of Management and Budget, rolled out Trump's budeget proposal last month.</figcaption>
+                <!--this image is dedicated to TC-->
 
 
-                    </figure>
-                    <h2>So how do those cuts look all together?</h2>
-                    <iframe id="datawrapper-chart-naiKF " src="//datawrapper.dwcdn.net/naiKF/3/ " frameborder="0 " allowtransparency="true " allowfullscreen="allowfullscreen " webkitallowfullscreen="webkitallowfullscreen " mozallowfullscreen="mozallowfullscreen
+            </figure>
+            <h2 class="big-text2">So how do those cuts look all together?</h2>
+            <iframe id="datawrapper-chart-naiKF " src="//datawrapper.dwcdn.net/naiKF/3/ " frameborder="0 " allowtransparency="true " allowfullscreen="allowfullscreen " webkitallowfullscreen="webkitallowfullscreen " mozallowfullscreen="mozallowfullscreen
                 " oallowfullscreen="oallowfullscreen " msallowfullscreen="msallowfullscreen " width="100% " height="600 "></iframe>
-                    <script type="text/javascript ">
-                        if ("undefined " == typeof window.datawrapper) window.datawrapper = {};
-                        window.datawrapper["naiKF "] = {}, window.datawrapper["naiKF "].embedDeltas = {
-                            "100 ": 680.33334,
-                            "200 ": 600.33334,
-                            "300 ": 573.33334,
-                            "400 ": 573.33334,
-                            "500 ": 547.33334,
-                            "600 ": 547.33334,
-                            "700 ": 547.33334,
-                            "800 ": 547.33334,
-                            "900 ": 547.33334,
-                            "1000 ": 547.33334
-                        }, window.datawrapper["naiKF "].iframe = document.getElementById("datawrapper-chart-naiKF "), window.datawrapper["naiKF "].iframe.style.height = window.datawrapper["naiKF "].embedDeltas[Math.min(1e3, Math.max(100 * Math.floor(
-                            window.datawrapper[
-                                "naiKF "].iframe.offsetWidth / 100), 100))] + "px ", window.addEventListener("message ", function(a) {
-                            if ("undefined " != typeof a.data["datawrapper-height "])
-                                for (var b in a.data["datawrapper-height "])
-                                    if ("naiKF " == b) window.datawrapper["naiKF "].iframe.style.height = a.data["datawrapper-height "][b] + "px "
-                        });
-                    </script>
+            <script type="text/javascript ">
+                if ("undefined " == typeof window.datawrapper) window.datawrapper = {};
+                window.datawrapper["naiKF "] = {}, window.datawrapper["naiKF "].embedDeltas = {
+                    "100 ": 680.33334,
+                    "200 ": 600.33334,
+                    "300 ": 573.33334,
+                    "400 ": 573.33334,
+                    "500 ": 547.33334,
+                    "600 ": 547.33334,
+                    "700 ": 547.33334,
+                    "800 ": 547.33334,
+                    "900 ": 547.33334,
+                    "1000 ": 547.33334
+                }, window.datawrapper["naiKF "].iframe = document.getElementById("datawrapper-chart-naiKF "), window.datawrapper["naiKF "].iframe.style.height = window.datawrapper["naiKF "].embedDeltas[Math.min(1e3, Math.max(100 * Math.floor(
+                    window.datawrapper[
+                        "naiKF "].iframe.offsetWidth / 100), 100))] + "px ", window.addEventListener("message ", function(a) {
+                    if ("undefined " != typeof a.data["datawrapper-height "])
+                        for (var b in a.data["datawrapper-height "])
+                            if ("naiKF " == b) window.datawrapper["naiKF "].iframe.style.height = a.data["datawrapper-height "][b] + "px "
+                });
+            </script>
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js "></script>
 
